--- a/styles/header.css
+++ b/styles/header.css
@@ -1,12 +1,11 @@
 .cabecalho__menu-hamburguer {
     width: 24px;
     height: 24px;
-    background-image: url(../assets/Menu.svg);
-    display: inline-block;
-    background-repeat:no-repeat;
+    background-image: url("../assets/Menu.svg");
+    background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
-    
+    display: inline-block;
+    margin: 10px 1rem;
 }
 
 .cabecalho {
@@ -14,6 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .container {
@@ -22,13 +22,39 @@
 }
 
 .container__imagem {
-    padding: 1em;
+    padding: 10px;
 }
 
 .lista-menu {
     display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
 }
 
 .container__botao:checked~.lista-menu {
     display: block;
+}
+
+.lista-menu__titulo,
+.lista-menu__item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+.lista-menu__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+
+.container__botao {
+    display: none;
 }
