--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,21 @@
 @import url("../styles/header.css");
+@import url("../styles/banner.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 
 :root {
     --cor-fundo: #EBECEE;
     --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: 'Poppins';
 }
 
 body {
     background-color: var(--cor-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 
