--- a/styles/banner.css
+++ b/styles/banner.css
@@ -30,4 +30,6 @@
     font-weight: 400;
     text-align: center;
     color: var(--branco);
+    background: url("../assets/Pesquisa.svg") no-repeat;
+    background-position: 1em;
 }
