--- a/styles/contato.css
+++ b/styles/contato.css
@@ -26,15 +26,14 @@
     padding: 1em;
     border-radius: 24px;
     width: 90%;
+    color: var(--azul);
 }
 
 .contato__email::placeholder {
     font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 400;
-    text-align: center;
     color: var(--azul);
     background: url("../assets/mail_black_24dp 1.svg") no-repeat;
     background-position: 1em;
+    padding: 4em;
 }
 
