--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
 @import url("../styles/carrossel.css");
 @import url("../styles/topicos.css");
 @import url("../styles/contato.css");
+@import url("../styles/rodape.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 
