Inserindo responsividade para tablet

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
 @import url("../styles/topicos.css");
 @import url("../styles/contato.css");
 @import url("../styles/rodape.css");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 
@@ -14,6 +15,10 @@
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: 'Poppins';
     --azul: #002F52;
+    --fonte-secundaria: 'Josefin Sans'
+    --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
 }
 
 body {
