--- a/styles/contato.css
+++ b/styles/contato.css
@@ -37,3 +37,25 @@
     padding: 4em;
 }
 
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__descricao {
+        margin-right: 1em;
+        width: 30%;
+    }
+
+    .contato__titulo {
+        font-size: 24px;
+    }
+
+    .contato__email {
+        width: 35%;
+        margin-left: 4em;
+    }
+}
+
